# mangos-tbc

./: CMakeLists.txt
.github/workflows/: macos.yml  ubuntu.yml  windows-release.yml  windows.yml
cmake/macros/: FindMySQL.cmake
dep/src/: CMakeLists.txt
doc/: script_commands.txt
sql/updates/characters/: s0000_01_characters_account_instances_entered.sql
src/game/: Chat.cpp  Chat.h  Creature.cpp  Creature.h  Level3.cpp  MotionMaster.cpp  PetHandler.cpp  Spell.cpp  SpellAuras.cpp  SpellEffects.cpp  StatSystem.cpp  Unit.cpp  Unit.h
src/game/AI/ScriptDevAI/scripts/kalimdor/: desolace.cpp
src/game/AI/ScriptDevAI/scripts/kalimdor/onyxias_lair/: instance_onyxias_lair.cpp
src/game/AuctionHouse/: AuctionHouseMgr.cpp
src/game/AuctionHouseBot/: AuctionHouseBot.cpp
src/game/BattleGround/: BattleGroundMgr.cpp
src/game/Chat/: Chat.cpp  Chat.h  ChatHandler.cpp  Level2.cpp  Level3.cpp  debugcmds.cpp
src/game/Combat/: DuelHandler.cpp
src/game/DBScripts/: ScriptMgr.cpp  ScriptMgr.h
src/game/Entities/: Corpse.cpp  Corpse.h  Creature.cpp  Creature.h  CreatureLinkingMgr.cpp  DynamicObject.cpp  DynamicObject.h  GameObject.cpp  GameObject.h  Item.cpp  Item.h  MiscHandler.cpp  Object.cpp  Object.h  Pet.cpp  Pet.h  PetHandler.cpp  Player.cpp  Player.h  QueryHandler.cpp  TemporarySpawn.cpp  TemporarySpawn.h  Totem.cpp  Totem.h  Transports.cpp  Transports.h  Unit.cpp  Unit.h
src/game/GMTickets/: GMTicketMgr.h
src/game/GameEvents/: GameEventMgr.cpp
src/game/Globals/: ObjectAccessor.cpp  ObjectMgr.cpp  SharedDefines.h
src/game/Grids/: GridNotifiers.cpp  GridNotifiersImpl.h
src/game/Groups/: Group.cpp  Group.h
src/game/Guilds/: Guild.cpp
src/game/Loot/: Loot.cpp  Loot.h  LootDefines.h  LootGroupRoll.cpp  LootGroupRoll.h  LootHandler.cpp  LootItem.cpp  LootItem.h  LootMgr.cpp  LootMgr.h  LootRules.cpp  LootRules.h  LootStore.cpp  LootStore.h
src/game/Mails/: Mail.cpp  MailHandler.cpp
src/game/Maps/: Map.cpp  Map.h  MapManager.cpp  MapPersistentStateMgr.cpp  SpawnGroup.cpp  SpawnGroup.h  SpawnGroupDefines.h
src/game/MotionGenerators/: MotionMaster.h  MovementHandler.cpp  TargetedMovementGenerator.cpp  TargetedMovementGenerator.h  WaypointManager.cpp  WaypointMovementGenerator.cpp
src/game/PlayerBot/Base/: PlayerbotAI.h
src/game/Pools/: PoolManager.cpp
src/game/Server/: WorldSession.cpp  WorldSocket.cpp  WorldSocket.h
src/game/Spells/: SpellAuras.cpp  SpellEffects.cpp  SpellHandler.cpp
src/game/World/: World.cpp
src/shared/: CMakeLists.txt  Timer.h  pchdef.h
src/shared/Network/: Socket.cpp  Socket.hpp
